# Robotframework-Database-Library

./: .gitignore  .project  .pydevproject  .travis.yml  MANIFEST  README.md  dblib_changelog.md  docker-compose.yml  index.html  pyproject.toml  requirements.txt  run_tests.sh  setup.py
.github/workflows/: MySQL-tests.yml  Oracle-tests.yml  PostgreSQL-tests.yml  README.rst  SQLite-tests.yml  common_tests.yml  excel_tests.yml  oracle_thick_mode.yml  static.yml  unit_tests.yml
api/0.1/: DatabaseLibrary.html
api/0.3/: DatabaseLibrary.html
api/0.4/: DatabaseLibrary.html
api/0.6/: DatabaseLibrary.html
api/1.0.1/: DatabaseLibrary.html
api/1.1/: DatabaseLibrary.html
api/1.2/: DatabaseLibrary.html
api/1.2.1/: DatabaseLibrary.html
doc/: DatabaseLibrary.html  index.html
results/: log.html  output.xml  report.html
src/DatabaseLibrary/: VERSION  __init__.py  assertion.py  connection_manager.py  exceptions.py  mongoquery.py  params_decorator.py  query.py  utils.py  version.py
src/SQLAlchemyLibrary/: __init__.py  assertion.py  connection_manager.py  query.py
src/atests/: test_query.py
test/: Aliases_SQLite3_DB_Tests.robot  DB2SQL_DB_Tests.robot  DB2_Variables.yaml  DB_Variables.yaml  Excel_DB_Test.robot  MSSQL_DB_Tests.robot  MongoDB-Library_Tests.txt  MySQL_DB_Tests.robot  MySQL_Variables.yaml  Oracle_Custom_Params_Tests.robot  PostgreSQL_DB_Tests.robot  PostgreSQL_Variables.yaml  PyODBC_DB_Tests.robot  SQLite3_DB_Tests.robot  Teradata_DB_Tests.robot  Test_Excel.xls  Test_Excel.xlsx  my_db_test.db  readme.md  run_tests.sh  testing.sql
test/resources/: common.resource  create_stored_procedure_mssql.sql  create_stored_procedure_mysql.sql  create_stored_procedure_postgres.sql  create_stored_procedures_mssql.sql  create_stored_procedures_oracle.sql  insert_data_in_person_table.sql
test/resources/config_files/: connect_config_file.resource
test/resources/script_file_tests/: select_with_robot_variables.sql  semicolons_and_quotes_in_values.sql  split_commands.sql  statements_in_one_line.sql
test/resources/script_files/: create_stored_procedures_mssql.sql  create_stored_procedures_mysql.sql  create_stored_procedures_oracle.sql  create_stored_procedures_postgres.sql  excel_db_test_insertData.sql  insert_data_in_person_table_utf8.sql  semicolons_and_quotes_in_values.sql  semicolons_in_values.sql  split_commands_comments.sql
test/tests/: __init__.robot
test/tests/_old/: DB2SQL_DB_Conf.txt  DB2SQL_DB_Tests.robot  MySQL-tests.yml  MySQL_DB_Tests.robot  Oracle_Custom_Params_Tests.robot  PostgreSQL-tests.yml  PostgreSQL_DB_Tests.robot  PyODBC_DB_Tests.robot  SQLite-tests.yml  SQLite3_DB_Tests.robot  Teradata_DB_Tests.robot  excel_old.robot
test/tests/common_tests/: aliased_connection.robot  assertion_custom_messages.robot  assertion_data_types.robot  assertion_error_messages.robot  assertion_retry.robot  basic_tests.robot  connection_params.robot  custom_connection.robot  description.robot  disconnect_from_db.robot  encoding.robot  import_params.robot  log_query_results.robot  query_params.robot  replace_robot_variables.robot  script_files.robot  split_sql.robot  stored_procedures.robot  transaction.robot
test/tests/custom_db_tests/: db_update_in_background_commit.robot  excel.robot  jaydebe.robot  (+5 more)
(+45 files in other folders)
